tests/fixtures/invalid/pow_float_none_float.py
# Cannot call pow() with Float, None, Float
x = pow(1.0, None, 1.0)
